pqrs/IaC/elk/kibana/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
    app.kubernetes.io/part-of: elk-metrics
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        app.kubernetes.io/part-of: elk-metrics
    spec:
      serviceAccountName: elk-sa
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:9.4.2
        ports:
        - containerPort: 5601
          name: ui
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        securityContext:
          runAsUser: 1000
          fsGroup: 1000
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
        - name: kibana-data
          mountPath: /usr/share/kibana/data
      volumes:
      - name: config-volume
        configMap:
          name: kibana-config
      - name: kibana-data
        persistentVolumeClaim:
          claimName: kibana-pvc
