pqrs/IaC/elk/kibana/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  labels:
    app.kubernetes.io/part-of: elk-metrics
spec:
  selector:
    app: kibana
  ports:
  - protocol: TCP
    port: 5601
    targetPort: 5601
